--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -9,6 +9,8 @@ server {
     access_log /var/log/nginx/access.log;
     error_log  /var/log/nginx/error.log;
 
+    client_max_body_size 1024M;
+
     location / {
         try_files $uri $uri/ /index.php$is_args$args;
     }
